# grantsage

./: .gitignore  CONTEXTO_GRANTSAGE.md  README.md  pyproject.toml
editais/_template/: catalogo.yaml
src/grantsage/: __init__.py  ui_copy.py
src/grantsage/ingest/: __init__.py  cli.py  docx.py  markdown.py  opendocument.py  paths.py  pdf.py
src/grantsage/llm/: __init__.py  cadastro.py  cliente.py  config.py
ui/: streamlit_app.py
